--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,19 @@ body {
   border-radius: 20%;
 }
 
+.bttn{
+  margin:5px;
+  height:30px;
+  width:100px;
+  border: 5px solid black;
+  background-color: black;
+  color:white;
+  border-radius: 20%;
+  font-family: sans-serif;
+
+}
+
+
 .game-over {
   background-color: red;
   opacity: 0.8;
